2003-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-make-contents): Return nil when
	an article couldn't be gotten.

2003-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-find-file-regexps): New user option.
	(w3m-local-find-file-function): New user option.
	(w3m-goto-url): Use the function specified by the
	`w3m-local-find-file-function' variable for local files when
	the file name matches the `w3m-local-find-file-regexps' variable.

2003-04-07  ARISAWA Akihiro  <ari@namazu.org>

	* shimbun/sb-ding.el: Removed.

2003-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-search.el (w3m-search-engine-alist): Change coding-system to
	`euc-japan' of "waei" and "kokugo". Tnx, Mr. Saito (sai@yedo.com)
	for his report.

2003-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-make-contents): New function
	used to get a correct date header for the science group.
	(shimbun-make-contents): Use it.
	* shimbun/sb-asahi-html.el (shimbun-make-contents): Use it.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-make-contents): New
	function used to get a correct date header.
	(shimbun-make-contents): Use it.
	* shimbun/sb-yomiuri-html.el (shimbun-make-contents): Use it.

	* shimbun/sb-mainichi.el (shimbun-make-contents): New function
	used to get a correct date header.

2003-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-get-headers): Revoke
	the last change.

2003-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-group-path-alist): Add
	tramp-devel.
	(shimbun-savannah-get-headers): Attempt to retrieve the default
	index page (w/o "index.html") first.

2003-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug): Make it possible to send a
	bug report even if emacs-w3m is not running.

2003-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-elips.el: New file.

2003-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>
